fix: set ingress class

--- a/openedx/values.yaml
+++ b/openedx/values.yaml
@@ -1,11 +1,9 @@
 harmony-chart:
   ingress-nginx:
     enabled: false
-    ingressClassName: nginx
+    controller:
+      ingressClassName: nginx
 
   cert-manager:
-    enabled: false
-
-  ingress:
     enabled: false
 
