--- a/openedx/values.yaml
+++ b/openedx/values.yaml
@@ -2,7 +2,7 @@ harmony-chart:
   ingress-nginx:
     enabled: false
     controller:
-      ingressClass: nginx
+      ingressClass: "nginx"
 
   cert-manager:
     enabled: false
